--- a/src/my-new-view.html
+++ b/src/my-new-view.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/paper-slider/paper-slider.html">
+<link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
 
 <dom-module id="my-new-view">
   <!-- Defines the element's style and local DOM -->
@@ -12,6 +14,12 @@
     </style>
 
     <h1>New view</h1>
+    <paper-slider min="-100" max="100" value="50"></paper-slider>
+
+    <paper-toggle-button>Toggle</paper-toggle-button>
+    <paper-toggle-button checked>Toggle</paper-toggle-button>
+    <paper-toggle-button disabled>Disabled</paper-toggle-button>
+    <paper-toggle-button invalid>Invalid</paper-toggle-button>
   </template>
   <!-- Creates the element's prototype and registers it -->
   <script>
