Change names of the rest of the pages

--- a/src/our-contact.html
+++ b/src/our-contact.html
@@ -4,7 +4,7 @@
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
 
-<dom-module id="my-new-view">
+<dom-module id="our-contact">
   <!-- Defines the element's style and local DOM -->
   <template>
     <style>
@@ -48,7 +48,7 @@
   <!-- Creates the element's prototype and registers it -->
   <script>
     Polymer({
-      is: 'my-new-view'
+      is: 'our-contact'
     });
   </script>
 </dom-module>
