--- a/src/our-app.html
+++ b/src/our-app.html
@@ -22,7 +22,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="my-icons.html">
 
-<dom-module id="my-app">
+<dom-module id="our-app">
   <template>
     <style>
       :host {
@@ -76,10 +76,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <app-drawer swipe-open="true">
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="view1" href="/view1">View One</a>
-          <a name="view2" href="/view2">View Two</a>
-          <a name="view3" href="/view3">View Three</a>
-          <a name="new-view" href="/new-view">THE New View</a>
+          <a name="home" href="/home">Home</a>
+          <a name="news" href="/news">News</a>
+          <a name="about" href="/about">About</a>
+          <a name="contact" href="/contact">Contact Us</a>
         </iron-selector>
       </app-drawer>
 
@@ -98,11 +98,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             attr-for-selected="name"
             fallback-selection="view404"
             role="main">
-          <my-view1 name="view1"></my-view1>
-          <my-view2 name="view2"></my-view2>
-          <my-view3 name="view3"></my-view3>
-          <my-new-view name="new-view"></my-new-view>
-          <my-view404 name="view404"></my-view404>
+          <our-home name="home"></our-home>
+          <our-news name="news"></our-news>
+          <our-about name="about"></our-about>
+          <our-contact name="contact"></our-contact>
+          <our-view404 name="view404"></our-view404>
         </iron-pages>
       </app-header-layout>
     </app-drawer-layout>
@@ -110,7 +110,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <script>
     Polymer({
-      is: 'my-app',
+      is: 'our-app',
 
       properties: {
         page: {
@@ -125,12 +125,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       ],
 
       _routePageChanged: function(page) {
-        this.page = page || 'view1';
+        this.page = page || 'home';
       },
 
       _pageChanged: function(page) {
         // Load page import on demand. Show 404 page if fails
-        var resolvedPageUrl = this.resolveUrl('my-' + page + '.html');
+        var resolvedPageUrl = this.resolveUrl('our-' + page + '.html');
         this.importHref(resolvedPageUrl, null, this._showPage404, true);
       },
 
