Add a new page on the web app

--- a/src/our-app.html
+++ b/src/our-app.html
@@ -80,6 +80,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="news" href="/news">News</a>
           <a name="about" href="/about">About</a>
           <a name="contact" href="/contact">Contact Us</a>
+          <a name="social" href="/social">Social Nets</a>
         </iron-selector>
       </app-drawer>
 
@@ -102,6 +103,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <our-news name="news"></our-news>
           <our-about name="about"></our-about>
           <our-contact name="contact"></our-contact>
+          <our-social name="social"></our-social>
           <our-view404 name="view404"></our-view404>
         </iron-pages>
       </app-header-layout>
