--- a/src/our-social.html
+++ b/src/our-social.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="my-icons.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="our-social">
@@ -13,7 +15,7 @@
 
     <div class="card">
       <div class="circle">32</div>
-      <h1>List of actions from the social networks</h1>
+      <h1><iron-icon icon="icons:public"></iron-icon>A list of headlines from the social networks<iron-icon icon="icons:people"></iron-icon></h1>
       <p>Ea duis bonorum nec, falli paulo aliquid ei eum.</p>
       <p>Id nam odio natum malorum, tibique copiosae expetenda mel ea.Detracto suavitate repudiandae no eum. Id adhuc minim soluta nam.Id nam odio natum malorum, tibique copiosae expetenda mel ea.</p>
     </div>
