Change the app-drawer toolbar color to bluey

--- a/src/our-app.html
+++ b/src/our-app.html
@@ -40,6 +40,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-icon-button-ink-color: white;
       }
 
+      app-drawer app-toolbar {
+        background: #7c7cff;
+      }
+
       .drawer-list {
         margin: 0 20px;
       }
@@ -79,8 +83,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="home" href="/home">Home</a>
           <a name="news" href="/news">News</a>
           <a name="about" href="/about">About</a>
-          <a name="contact" href="/contact">Contact Us</a>
-          <a name="social" href="/social">Social Nets</a>
+          <a name="contact" href="/contact"><iron-icon icon="icons:people"></iron-icon> Contact Us</a>
+          <a name="social" href="/social"><iron-icon icon="icons:public"></iron-icon> Social Nets</a>
         </iron-selector>
       </app-drawer>
 
