--- a/src/our-contact.html
+++ b/src/our-contact.html
@@ -1,8 +1,11 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/paper-slider/paper-slider.html">
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
-<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
+<link rel="import" href="../bower_components/neon-animation/neon-animation.html">
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
+<link rel="import" href="../bower_components/app-route/app-route.html">
+<link rel="import" href="../bower_components/app-route/app-location.html">
 
 <dom-module id="our-contact">
   <!-- Defines the element's style and local DOM -->
@@ -21,6 +24,10 @@
           color: ivory;
         };
       }
+      paper-tabs#pt paper-tab a {
+          height: 0;
+          text-align: center;
+        }
     </style>
 
     <!--<h1>New view</h1>
@@ -30,20 +37,21 @@
     <paper-toggle-button checked>Toggle</paper-toggle-button>
     <paper-toggle-button disabled>Disabled</paper-toggle-button>
     <paper-toggle-button invalid>Invalid</paper-toggle-button>-->
+    <app-location route="{{route}}"></app-location>
+    <app-route route="{{route}}" pattern="/contact/:page" data="{{data}}" tail="{{tail}}"></app-route>
 
-
-    <paper-tabs selected="{{selected}}" fallback-selection="1">
-      <paper-tab>Tab 1</paper-tab>
-      <paper-tab>Tab 2</paper-tab>
-      <paper-tab>Tab 3</paper-tab>
+    <paper-tabs id="pt" selected="{{data.page}}" attr-for-selected='key' fallback-selection="0">
+      <paper-tab key="0"><a href="/contact/0">Tab 1</a></paper-tab>
+      <paper-tab key="1"><a href="/contact/1">Tab 2</a></paper-tab>
+      <paper-tab key="2"><a href="/contact/2">Tab 3</a></paper-tab>
     </paper-tabs>
 
 
-    <iron-pages selected="{{selected}}">
-      <div>Page 1</div>
-      <div>Page 2</div>
-      <div>Page 3</div>
-    </iron-pages>  
+    <neon-animated-pages selected="{{data.page}}" attr-for-selected='key' >
+      <neon-animatable key="0">Page 1</neon-animatable>
+      <neon-animatable key="1">Page 2</neon-animatable>
+      <neon-animatable key="2">Page 3</neon-animatable>
+    </neon-animated-pages>  
   </template>
   <!-- Creates the element's prototype and registers it -->
   <script>
