Make the paper tab anchors fill up the tab

--- a/src/our-contact.html
+++ b/src/our-contact.html
@@ -25,9 +25,12 @@
         };
       }
       paper-tabs#pt paper-tab a {
-          height: 0;
-          text-align: center;
-        }
+        height: 100%;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+      }
     </style>
 
     <!--<h1>New view</h1>
