Make drawer close when page from menu is clicked

--- a/src/our-app.html
+++ b/src/our-app.html
@@ -77,9 +77,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <app-drawer-layout fullbleed force-narrow="true">
       <!-- Drawer content -->
-      <app-drawer swipe-open="true">
+      <app-drawer id="mainAppDrawer" swipe-open="true" transition-duration="400">
         <app-toolbar>Menu</app-toolbar>
-        <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
+        <iron-selector on-tap="closeDrawer" selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="home" href="/home">Home</a>
           <a name="news" href="/news">News</a>
           <a name="about" href="/about">About</a>
@@ -142,6 +142,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       _showPage404: function() {
         this.page = 'view404';
+      },
+
+      closeDrawer: function () {
+        // console.log("dance");
+        this.$.mainAppDrawer.close()
       }
     });
   </script>
