Add link to credit Huskie creater on codepen

--- a/src/our-view404.html
+++ b/src/our-view404.html
@@ -37,6 +37,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         width: 100%;
         justify-content: center;
       }
+      #steps-list {
+        padding-bottom: 90px;
+      }
       #steps-list li{
         display: inline-block;
         padding: 0 8px;
@@ -2118,6 +2121,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <li><a href="/about">Go About.</a></li>
           <li><a href="/contact">Contact Us.</a></li>
           <li><a href="https://www.youtube.com/watch?v=cvChjHcABPA">Shout SOS.</a></li>
+          <li><a href="http://codepen.io/davidkpiano/pen/wMqXea">Kennel Credits.</a></li>
         </ul>
       </div>
     </div>
